--- a/activity_ally/android/app/build.gradle
+++ b/activity_ally/android/app/build.gradle
@@ -24,12 +24,17 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.activity_ally"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
+    //compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
+        //
+        coreLibraryDesugaringEnabled true
+        //
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
 
     kotlinOptions {
@@ -49,6 +54,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -64,4 +70,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+}
