--- a/activity_ally/pubspec.yaml
+++ b/activity_ally/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
   sqflite: ^2.3.0
+  raised_buttons: ^0.0.2
 
 dev_dependencies:
   flutter_test:
