--- a/activity_ally/pubspec.yaml
+++ b/activity_ally/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
+  uuid: ^4.1.0
+  flutter_riverpod: ^2.4.5
   image_picker: ^1.0.4
   sqflite: ^2.3.0
   flutter_local_notifications: ^16.1.0
