--- a/activity_ally/pubspec.yaml
+++ b/activity_ally/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 
   flutter_local_notifications: ^16.1.0
   permission_handler: ^11.0.1
+  google_maps_flutter: ^2.5.0
 
 
 dev_dependencies:
