--- a/activity_ally/pubspec.yaml
+++ b/activity_ally/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   permission_handler: ^11.0.1
   google_maps_flutter: ^2.5.0
+  google_places_flutter: ^2.0.6
+  geolocator: ^10.1.0
 
 
 dev_dependencies:
