--- a/activity_ally/pubspec.yaml
+++ b/activity_ally/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_places_flutter: ^2.0.6
   geolocator: ^10.1.0
+  http: ^1.1.0
 
 
 dev_dependencies:
